# Maestro

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  TODO.md  alembic.ini  database.py  db_statements.sql  pyproject.toml  test_setup.md
backend/alembic/: env.py
backend/alembic/versions/: 9063f7b89c8d_initial_schema.py  ecf722526565_add_cancelled_run_status.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  routes_agents.py  routes_health.py  routes_messages.py  routes_runs.py
backend/app/core/: __init__.py  concurrency.py  ids.py  startup.py  tasks.py  time.py
backend/app/models/: __init__.py  agent.py  enums.py  message.py  meta.py  run.py  tool_call.py
backend/app/schemas/: __init__.py  agent.py  message.py  run.py  ws.py
backend/app/services/: __init__.py  agent_service.py  ollama_client.py  run_service.py
backend/app/services/tools/: __init__.py  filesystem.py  registry.py
backend/app/ws/: __init__.py  events.py  manager.py  routes_ws.py
backend/tests/: conftest.py  helpers.py  test_agent_deletion.py  test_agents.py  test_health.py  test_run_cancel.py  test_run_cascade.py  test_run_concurrency.py  test_run_restart.py  test_ws.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: AgentSettingsForm.jsx  App.jsx  App.tsx  agentSettingsUtils.js  agentSettingsUtils.test.js
frontend/src/api/: agentSettingsUtils.ts  agents.ts  client.ts  health.ts  messages.ts  parseThinking.ts  runs.ts  types.ts
frontend/src/components/: AgentDetailPanel.tsx  AgentSettingsForm.tsx  (+3 more)
(+1 files in other folders)
